--- a/Lab1/Views/Home/Index.cshtml
+++ b/Lab1/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET I changed this because it initially said "nothing to commit"</h1>
+    <h1>"nothing to commit"</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
